# cuma

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
src/IO/: JpegIO.cpp  JpegIO.h
src/Utility/: HeapManager.cpp  HeapManager.h  MirroredArray.h  MirroredArrayKernel.h  Profile.cpp  Profile.h  ScopeProfile.cpp  ScopeProfile.h  Utility.cpp  utility.h
